--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "axios-debug-log": "^0.8.4",
     "cheerio": "^1.0.0-rc.10",
     "commander": "^9.1.0",
     "debug": "^4.3.4",
